[package]
name = "planner"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unix-ts = "1.0.0"
verbose-macros = "0.1.1"

[[bin]]
name="nplan"
path="src/main.rs"